--- a/dmo.ipynb
+++ b/dmo.ipynb
@@ -119,6 +119,236 @@
     "\n",
     "print(dlib.DLIB_USE_CUDA)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7ccefdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correct for inserting Gaze Data\n",
+    "\n",
+    "import json\n",
+    "from tqdm import tqdm\n",
+    "import cv2\n",
+    "import json\n",
+    "import numpy as np\n",
+    "from opencv_jupyter_ui import cv2_imshow\n",
+    "\n",
+    "radius = 20\n",
+    "color = (255, 255, 255)\n",
+    "thickness = 2\n",
+    "\n",
+    "# vid = \"/raid/home/labuseraber/environment/testEnvironment/yolov5/runs/detect/exp7/kitchen4.mp4\"\n",
+    "# vid = \"/raid/home/labuseraber/environment/testEnvironment/yolov5/runs/detect/exp/kitchen2.mp4\"\n",
+    "vid = \"/raid/home/labuseraber/environment/testEnvironment/OnlineECParser/input/kitchen4.mp4\"\n",
+    "vidcap = cv2.VideoCapture(vid)\n",
+    "success, img = vidcap.read()\n",
+    "height, width, channels = img.shape\n",
+    "count = 0\n",
+    "\n",
+    "fourcc = cv2.VideoWriter_fourcc(*'mp4v') \n",
+    "video = cv2.VideoWriter('./kitchen4Gaze07082022_withoutIntentions.mp4', fourcc, 25, (width, height))\n",
+    "\n",
+    "def read(lineNumber):\n",
+    "    r = open('/raid/home/labuseraber/environment/testEnvironment/OnlineECParser/gaze.json')\n",
+    "    # r = open('/raid/home/labuseraber/environment/testEnvironment/OnlineECParser/gazedata')\n",
+    "    line = r.readlines()\n",
+    "    e = json.loads(line[lineNumber])\n",
+    "    # if e[\"data\"]:\n",
+    "    #     x = e[\"data\"][\"gaze2d\"][0]\n",
+    "    #     y = e[\"data\"][\"gaze2d\"][1]\n",
+    "    #     img = cv2.circle(img, (int(x*width), int(y*height)), radius, color, thickness)\n",
+    "    #     video.write(img)\n",
+    "    # else:\n",
+    "    #     video.write(img)\n",
+    "    # return x, y\n",
+    "    if e[\"data\"]:\n",
+    "        x = e[\"data\"][\"gaze2d\"][0]\n",
+    "        y = e[\"data\"][\"gaze2d\"][1]\n",
+    "        return x, y\n",
+    "    else:\n",
+    "        x=0\n",
+    "        y=0\n",
+    "        return x, y\n",
+    "\n",
+    "for i in tqdm(range(5291)):\n",
+    "    success, img = vidcap.read()\n",
+    "    count = count + 4\n",
+    "    # print(i, count)\n",
+    "    x, y = read(count)\n",
+    "    img = cv2.circle(img, (int(x*width), int(y*height)), radius, color, thickness)\n",
+    "    # cv2_imshow('test',img)\n",
+    "    video.write(img)\n",
+    "\n",
+    "cv2.destroyAllWindows()\n",
+    "video.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28aa3292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "r = open('/raid/home/labuseraber/environment/testEnvironment/dmo08082022/dpoExample.json')\n",
+    "y = json.load(r)\n",
+    "\n",
+    "ext1 = y[0]['iai_dpo_metadata'][0]['file:extension']\n",
+    "ext2 = y[0]['iai_dpo_metadata'][1]['file:extension']\n",
+    "\n",
+    "if ext1 == 'mp4' and ext2 == 'png':\n",
+    "    videoName = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    imageName = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "    print('\\nvideoName: ', videoName)\n",
+    "    print('\\nimageName: ', imageName)\n",
+    "elif ext2 == 'mp4' and ext1 == 'png':\n",
+    "    videoName = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "    imageName = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    print('\\nimageName: ', imageName)\n",
+    "    print('\\nvideoName: ', videoName)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9298e6b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# JSON - two .dpo\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "r = open('/raid/home/labuseraber/environment/testEnvironment/dmo08082022/dpoExample.json')\n",
+    "y = json.load(r)\n",
+    "\n",
+    "ext1 = y[0]['iai_dpo_metadata'][0]['file:extension']\n",
+    "ext2 = y[0]['iai_dpo_metadata'][1]['file:extension']\n",
+    "\n",
+    "if ext1 == 'mp4' or ext2 == 'mp4':\n",
+    "    videoName1 = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    videoName2 = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "\n",
+    "    if 'mp4' in ext1:\n",
+    "        videoName = videoName1\n",
+    "    elif 'mp4' in ext2:\n",
+    "        videoName = videoName2\n",
+    "\n",
+    "    print('\\nvideoName: ', videoName)\n",
+    "\n",
+    "if ext1 == 'png' or ext2 == 'png':\n",
+    "    imageName1 = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    imageName2 = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "\n",
+    "    if 'png' in ext1:\n",
+    "        imageName = imageName1\n",
+    "    elif 'png' in ext2:\n",
+    "        imageName = imageName2\n",
+    "\n",
+    "    print('\\nimageName: ', imageName)\n",
+    "\n",
+    "if ext1 == 'jpg' or ext2 == 'jpg':\n",
+    "    imageName1 = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    imageName2 = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "\n",
+    "    if 'png' in ext1:\n",
+    "        imageName = imageName1\n",
+    "    elif 'png' in ext2:\n",
+    "        imageName = imageName2\n",
+    "\n",
+    "    print('\\nimageName: ', imageName)\n",
+    "\n",
+    "if ext1 == 'bag' or ext2 == 'bag':\n",
+    "    imageName1 = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    imageName2 = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "\n",
+    "    if 'png' in ext1:\n",
+    "        imageName = imageName1\n",
+    "    elif 'png' in ext2:\n",
+    "        imageName = imageName2\n",
+    "\n",
+    "    print('\\nimageName: ', imageName)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccf9bf7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# JSON - extended to three .dpo\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "r = open('/raid/home/labuseraber/environment/testEnvironment/dmo08082022/dpoExampleCopy.json')\n",
+    "y = json.load(r)\n",
+    "\n",
+    "ext1 = y[0]['iai_dpo_metadata'][0]['file:extension']\n",
+    "ext2 = y[0]['iai_dpo_metadata'][1]['file:extension']\n",
+    "ext3 = y[0]['iai_dpo_metadata'][2]['file:extension']\n",
+    "\n",
+    "if ext1 == 'mp4' or ext2 == 'mp4' or ext3 == 'mp4':\n",
+    "    videoName1 = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    videoName2 = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "    videoName3 = y[0]['iai_dpo_metadata'][2]['id'] + '.dpo'\n",
+    "\n",
+    "    if 'mp4' in ext1:\n",
+    "        videoName = videoName1\n",
+    "    elif 'mp4' in ext2:\n",
+    "        videoName = videoName2\n",
+    "    elif 'mp4' in ext3:\n",
+    "        videoName = videoName3\n",
+    "\n",
+    "    print('\\nvideoName: ', videoName)\n",
+    "\n",
+    "if ext1 == 'png' or ext2 == 'png' or ext3 == 'png':\n",
+    "    imageName1 = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    imageName2 = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "    imageName3 = y[0]['iai_dpo_metadata'][2]['id'] + '.dpo'\n",
+    "\n",
+    "    if 'png' in ext1:\n",
+    "        imageName = imageName1\n",
+    "    elif 'png' in ext2:\n",
+    "        imageName = imageName2\n",
+    "    elif 'png' in ext3:\n",
+    "        imageName = imageName3\n",
+    "\n",
+    "    print('\\nimageName: ', imageName)\n",
+    "\n",
+    "if ext1 == 'jpg' or ext2 == 'jpg' or ext3 == 'jpg':\n",
+    "    imageName1 = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    imageName2 = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "    imageName3 = y[0]['iai_dpo_metadata'][2]['id'] + '.dpo'\n",
+    "\n",
+    "    if 'jpg' in ext1:\n",
+    "        imageName = imageName1\n",
+    "    elif 'jpg' in ext2:\n",
+    "        imageName = imageName2\n",
+    "    elif 'jpg' in ext3:\n",
+    "        imageName = imageName3\n",
+    "\n",
+    "    print('\\nimageName: ', imageName)\n",
+    "\n",
+    "if ext1 == 'bag' or ext2 == 'bag' or ext3 == 'bag':\n",
+    "    bagName1 = y[0]['iai_dpo_metadata'][0]['id'] + '.dpo'\n",
+    "    bagName2 = y[0]['iai_dpo_metadata'][1]['id'] + '.dpo'\n",
+    "    bagName3 = y[0]['iai_dpo_metadata'][2]['id'] + '.dpo'\n",
+    "\n",
+    "    if 'png' in ext1:\n",
+    "        bagName = bagName1\n",
+    "    elif 'png' in ext2:\n",
+    "        bagName = bagName2\n",
+    "    elif 'png' in ext3:\n",
+    "        bagName = bagName3\n",
+    "\n",
+    "    print('\\nimageName: ', bagName)"
+   ]
   }
  ],
  "metadata": {
